--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Academic/Professional Profile</title>
-    <style>
-        /* Add styles for minimalistic and modern look */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        /* Add styles for the profile picture */
-        .profile-picture {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 300px;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        /* Add styles for dark mode */
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: black;
-                color: white;
-            }
-        }
-    </style>
+    <title>Filip Kalapish</title>
+    <link rel="stylesheet" type="text/scss" href="style.scss">
   </head>
   <body>
-    <div class="profile-picture">
-      <img src="path/to/profile-picture.jpg" alt="Profile Picture">
-    </div>
-    <div class="content">
-      <!-- Add content describing the person in an academic/professional way -->
-    </div>
-  </body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </section>
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.</p>
+        </section>
+        <section class="projects">
+            <h2>My Projects</h2>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li>Proin id nibh id quam feugiat bibendum.</li>
+                <li>Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Copyright &copy;2022 Example Page</p>
+    </footer>
+</body>
 </html>
