chaanging scss to css for the time being

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Filip Kalapish</title>
-    <link rel="stylesheet" type="text/scss" href="style.scss">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
