--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Lorem Ipsum</h1>
+            <h1>Hi, I'm Filip</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="about">
@@ -31,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy;2022 Example Page</p>
+        <p>Copyright &copy;2023 Filip K</p>
     </footer>
 </body>
 </html>
