--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </header>
     <main>
         <section class="hero">
+            <div class="profile-picture">
+                <img src="profile-picture.jpeg" alt="Profile Picture">
+              </div>
             <h1>Hi, I'm Filip</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
