minor style fixes - profpic size agjustemnt

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.">Contact</a>
+            <a href="index.html#abt-section">About</a>
+            <a href="index.html#cnt-section">Contact</a>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <div class="profile-picture">
-                <img src="profile-picture.jpeg" alt="Profile Picture">
+            <div class="profile-picture-container">
+                <img calss="profile-picture" src="profile-picture.jpeg" alt="Profile Picture">
               </div>
             <h1>Hi, I'm Filip</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -24,7 +24,7 @@
             <h2>About Me</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.</p>
         </section>
-        <section class="projects">
+        <section id="cnt-section" class="projects">
             <h2>My Projects</h2>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
