--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="index.html#abt-section">About</a>
+            <!-- <a href="index.html#abt-section">About</a> -->
             <a href="index.html#cnt-section">Contact</a>
+            <a href="about.html">Contact</a>
         </nav>
     </header>
     <main>
