--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Filip Kalapish</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="js/dots.js"></script>
   </head>
   <body>
     <header>
@@ -26,25 +27,15 @@
                     vision with internship experience in AI-chat bot and web design.</p>
             </div>
         </section>
-        <section class="image-section">
-            <div class="content-container">
-                <h2 class="section-heading">My projects</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod ligula eu augue pulvinar lobortis. Vestibulum non aliquam sem. Vestibulum vitae lectus non massa sodales ornare eu ac risus.</p>
-            </div>
-            <div class="image-container">
-                <img src="profile-picture.jpeg" alt="Futuristic Image">
-            </div>
-        </section>
         <section id="pjt-section">
             <div class="dotstyle dotstyle-hop">
-                <h2>Hop</h2>
                 <ul>
-                    <li class="current"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="current"><a href="#">p0</a></li>
+                    <li><a href="#">p1</a></li>
+                    <li><a href="#">p2</a></li>
+                    <li><a href="#">p3</a></li>
+                    <li><a href="#">p4</a></li>
+                    <li><a href="#">p5</a></li>
                 </ul>
             </div>
         </section>
@@ -56,131 +47,18 @@
                 <li>Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.</li>
             </ul>
         </section>
-        <script>
-            ;( function( window ) {
-
-                'use strict';
-
-                function extend( a, b ) {
-                    for( var key in b ) {
-                        if( b.hasOwnProperty( key ) ) {
-                            a[key] = b[key];
-                        }
-                    }
-                    return a;
-                }
-
-                function DotNav( el, options ) {
-                    this.nav = el;
-                    this.options = extend( {}, this.options );
-                    extend( this.options, options );
-                    this._init();
-                }
-
-                DotNav.prototype.options = {};
-
-                DotNav.prototype._init = function() {
-                    // special case "dotstyle-hop"
-                    var hop = this.nav.parentNode.className.indexOf( 'dotstyle-hop' ) !== -1;
-
-                    var dots = [].slice.call( this.nav.querySelectorAll( 'li' ) ), current = 0, self = this;
-
-                    dots.forEach( function( dot, idx ) {
-                        dot.addEventListener( 'click', function( ev ) {
-                            ev.preventDefault();
-                            if( idx !== current ) {
-                                dots[ current ].className = '';
-
-                                // special case
-                                if( hop && idx < current ) {
-                                    dot.className += ' current-from-right';
-                                }
-
-                                setTimeout( function() {
-                                    dot.className += ' current';
-                                    current = idx;
-                                    if( typeof self.options.callback === 'function' ) {
-                                        self.options.callback( current );
-                                    }
-                                }, 25 );
-                            }
-                        } );
-                    } );
-                }
-
-                // add to global namespace
-                window.DotNav = DotNav;
-
-            })( window );
-        </script>
     </main>
     <footer>
         <p>Copyright &copy;2023 Filip K</p>
     </footer>
     <script>
-        ( function( window ) {
-
-            'use strict';
-
-            function extend( a, b ) {
-                for( var key in b ) {
-                    if( b.hasOwnProperty( key ) ) {
-                        a[key] = b[key];
-                    }
+        [].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
+            new DotNav( nav, {
+                callback : function( idx ) {
+                    console.log( idx )
                 }
-                return a;
-            }
-
-            function DotNav( el, options ) {
-                this.nav = el;
-                this.options = extend( {}, this.options );
-                extend( this.options, options );
-                this._init();
-            }
-
-            DotNav.prototype.options = {};
-
-            DotNav.prototype._init = function() {
-                // special case "dotstyle-hop"
-                var hop = this.nav.parentNode.className.indexOf( 'dotstyle-hop' ) !== -1;
-
-                var dots = [].slice.call( this.nav.querySelectorAll( 'li' ) ), current = 0, self = this;
-
-                dots.forEach( function( dot, idx ) {
-                    dot.addEventListener( 'click', function( ev ) {
-                        ev.preventDefault();
-                        if( idx !== current ) {
-                            dots[ current ].className = '';
-
-                            // special case
-                            if( hop && idx < current ) {
-                                dot.className += ' current-from-right';
-                            }
-
-                            setTimeout( function() {
-                                dot.className += ' current';
-                                current = idx;
-                                if( typeof self.options.callback === 'function' ) {
-                                    self.options.callback( current );
-                                }
-                            }, 25 );
-                        }
-                    } );
-                } );
-            }
-
-            // add to global namespace
-            window.DotNav = DotNav;
-
-        })( window );
-
-        const hash = window.location.hash;
-
-        const element = document.getElementById(hash.substring(1));
-        window.onload = function() {
-        element.classList.add("pulse-shadow");
-        }
-
+            } );
+        } );
     </script>
 </body>
 </html>
