--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Filip Kalapish</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="js/dots.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/slides.js"></script>
   </head>
   <body>
     <header>
@@ -27,6 +30,51 @@
                     vision with internship experience in AI-chat bot and web design.</p>
             </div>
         </section>
+        <!--<section>
+            <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="https://images.pexels.com/photos/1824273/pexels-photo-1824273.jpeg?cs=srgb&dl=pexels-victor-miyata-1824273.jpg&fm=jpg"
+                         class="swiper-lazy" alt="exampleimg"/>
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://images.pexels.com/photos/3219549/pexels-photo-3219549.jpeg?cs=srgb&dl=pexels-engin-akyurt-3219549.jpg&fm=jpg"
+                         class="swiper-lazy" alt="exampleimg"/>
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://images.pexels.com/photos/1579240/pexels-photo-1579240.jpeg?cs=srgb&dl=pexels-stas-knop-1579240.jpg&fm=jpg"
+                         class="swiper-lazy" alt="exampleimg"/>
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://images.pexels.com/photos/51415/pexels-photo-51415.jpeg?cs=srgb&dl=pexels-max-deroin-51415.jpg&fm=jpg"
+                         class="swiper-lazy" alt="exampleimg"/>
+                </div>
+            </div>
+
+
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+            </div>
+        </section>-->
+        <section>
+            <h1>Projects</h1>
+            <div class="container">
+                <!-- Project content container -->
+                <!-- Slider main container -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slide_1">Slide 1</div>
+                        <div class="swiper-slide slide_2">Slide 2</div>
+                        <div class="swiper-slide slide_3">Slide 3</div>
+                        <div class="swiper-slide slide_4">Slide 4</div>
+                        <div class="swiper-slide slide_5">Slide 5</div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
+        </section>
         <section id="pjt-section">
             <div class="dotstyle dotstyle-hop">
                 <ul>
@@ -39,7 +87,7 @@
                 </ul>
             </div>
         </section>
-        <section id="cnt-section" class="projects">
+        <section id="cnt-section" class="projects" style="visibility: hidden">
             <h2>My Projects</h2>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
