--- a/playground.html
+++ b/playground.html
@@ -1,20 +1,354 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Filip Kalapish</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        /*body*/
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+            justify-content: space-between;
+            background: linear-gradient(157deg, rgb(45, 45, 52) 5%, rgb(6, 16, 33) 90%);
+            color: white;
+            overflow-x: hidden;
+        }
+
+        /*nav*/
+        header {
+            backdrop-filter: blur(15px);
+            background-color: rgba(28, 28, 30, 0.8);
+            width: 100%;
+            position: fixed;
+            z-index: 1;
+        }
+
+        nav {
+            overflow: hidden;
+            margin-top: 20px;
+            padding: 40px;
+            width: calc(100% - 60px);
+        }
+
+        #nav-link-container {
+            float: right;
+        }
+
+        .nav-link {
+            color: rgba(242, 242, 247, 1);
+            text-decoration: none;
+            font-size: 17px;
+            padding: 9px 11px;
+            margin: 5px;
+            border: 1px solid rgba(229, 229, 234, 0.2);
+            background-color: rgba(229, 229, 234, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+        }
+
+        .nav-link:hover {
+            color: silver;
+        }
+
+        #big-name {
+            color: rgba(242, 242, 247, 1);
+            font-size: 28px;
+
+        }
+
+        /*main body*/
+        main {
+            margin: 80px 0 0 0;
+        }
+
+        .image-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 100px;
+            margin-bottom: 100px;
+        }
+
+        .image-container {
+            width: 20%;
+            animation: slide-in-left 1s ease;
+        }
+
+        .content-container {
+            width: 50%;
+            animation: slide-in-right 1s ease;
+        }
+
+        .section-heading {
+            font-size: 48px;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+
+        .section-description {
+            font-size: 24px;
+            line-height: 1.5;
+        }
+
+        .project-section {
+            position: relative;
+            padding: 100px;
+            margin-bottom: 100px;
+        }
+
+
+
+
+        /* Swiper container styling */
+        .swiper {
+            right: 1rem;
+            height: 50vh;
+            width: 100%;
+        }
+
+
+        .swiper-slide {
+            text-align: center;
+            /* Center slide text vertically */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+
+        .slide_1 {
+            background-color: #643ca3;
+        }
+
+
+        .slide_2 {
+            background-color: #e38364;
+        }
+
+
+        .slide_3 {
+            background-color: #faf47a;
+        }
+
+
+        .slide_4 {
+            background-color: #64e3c1;
+        }
+
+
+        .slide_5 {
+            background-color: #9e6ffd;
+        }
+
+        .swiper-button-next,
+        .swiper-button-prev {
+            outline: none;
+        }
+
+        .swiper {
+            width: 70%;
+            --swiper-navigation-color: #000000;
+            --swiper-pagination-color: #000000;
+        }
+
+        .swiper-slide img {
+            width: auto;
+            height: auto;
+            max-width: 85%;
+            max-height: 100%;
+            -ms-transform: translate(-50%, -50%);
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+        }
+
+
+
+        .dotstyle {
+            text-align: center;
+        }
+
+        .dotstyle ul {
+            /* position: relative; */
+            display: inline-block;
+            /* margin: auto; */
+            /* padding: 0; */
+            list-style: none;
+            cursor: default;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        .dotstyle li {
+            position: relative;
+            display: block;
+            float: left;
+            margin: 0 16px;
+            width: 16px;
+            height: 16px;
+            cursor: pointer;
+        }
+
+        .dotstyle li a {
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            outline: none;
+            border-radius: 50%;
+            /*background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.3);*/
+            text-indent: -999em;
+            /* make the text accessible to screen readers */
+            cursor: pointer;
+            position: absolute;
+        }
+
+        .dotstyle li a:focus {
+            outline: none;
+        }
+
+        /* Fly in */
+
+        .dotstyle-hop li a {
+            border: 2px solid #cccdd3;
+            background: transparent;
+        }
+
+        .dotstyle-hop li a::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            border-radius: 50%;
+            visibility: hidden;
+            background: #fff;
+            opacity: 0;
+            -webkit-transform: rotate(-100deg);
+            transform: rotate(-100deg);
+            -webkit-transform-origin: -200% 50%;
+            transform-origin: -200% 50%;
+            -webkit-transition: -webkit-transform 0.3s ease 0.3s, opacity 0.3s ease, visibility 0s 0.3s ease;
+            transition: transform 0.3s ease 0.3s, opacity 0.3s ease, visibility 0s 0.3s ease;
+        }
+
+        .dotstyle-hop li a:focus {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .dotstyle-hop li.current-from-right a::after {
+            -webkit-transition: none;
+            transition: none;
+            -webkit-transform: rotate(100deg);
+            transform: rotate(100deg);
+            -webkit-transform-origin: 300% 50%;
+            transform-origin: 300% 50%;
+        }
+
+        .dotstyle-hop li.current a::after {
+            visibility: visible;
+            opacity: 1;
+            -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+            -webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        @keyframes slide-in-left {
+            from {
+                transform: translateX(-100%);
+            }
+
+            to {
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes slide-in-right {
+            from {
+                transform: translateX(100%);
+            }
+
+            to {
+                transform: translateX(0);
+            }
+        }
+
+
+        /*footer*/
+        footer {
+            padding: 10px;
+            text-align: center;
+        }
+
+
+        /* adaptivity mngmnt */
+        /*theme*/
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: black;
+                color: white;
+            }
+
+            .hero {
+                color: black;
+            }
+        }
+
+        /*size*/
+        @media (min-width: 600px) {
+            .profile-picture {
+                width: 25vw;
+            }
+        }
+
+        @media (min-width: 1000px) {
+            .profile-picture {
+                width: 15vw;
+            }
+        }
+    </style>
     <script src="js/dots.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/slides.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
         <nav>
             <a id="big-name">Filip Kalapish</a>
             <div id="nav-link-container">
-                <a class="nav-link" href="index.html#pjt-section">Projects</a>
-                <a class="nav-link" href="index.html#cnt-section">Contact</a>
+                <a class="nav-link" href="#pjt-section">Projects 2.0</a>
+                <a class="nav-link" href="index.html">Back home</a>
             </div>
         </nav>
     </header>
@@ -25,8 +359,7 @@
             </div>
             <div class="content-container">
                 <h2 class="section-heading">Hi, I'm Filip</h2>
-                <p class="section-description">I am a CS student at ETH Zurich interested in computer graphics and computer
-                    vision with internship experience in AI-chat bot and web design.</p>
+                <p class="section-description">welcome to my construction site. thread with caution - most elements here are broken/non-functioning :)</p>
             </div>
         </section>
         <!--<section>
@@ -91,7 +424,8 @@
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                 <li>Proin id nibh id quam feugiat bibendum.</li>
-                <li>Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.</li>
+                <li>Sed auctor, magna id tempor aliquet, sem nulla bibendum magna, eget euismod nulla ipsum id odio.
+                </li>
             </ul>
         </section>
     </main>
@@ -99,13 +433,14 @@
         <p>Copyright &copy;2023 Filip K</p>
     </footer>
     <script>
-        [].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
-            new DotNav( nav, {
-                callback : function( idx ) {
-                    console.log( idx )
+        [].slice.call(document.querySelectorAll('.dotstyle > ul')).forEach(function (nav) {
+            new DotNav(nav, {
+                callback: function (idx) {
+                    console.log(idx)
                 }
-            } );
-        } );
+            });
+        });
     </script>
 </body>
+
 </html>
